--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.8.8",
     "react-scripts": "4.0.3",
+    "swr": "^0.5.6",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2"
   },
